[package]

name = "rustbook"
version = "0.2.0"
authors = [ "Steve Klabnik <steve@steveklabnik.com>",
            "aturon@mozilla.com" ]

description = "Create multi-chapter documentation with Rustdoc."
license = "Apache-2.0"
repository = "https://github.com/steveklabnik/rustbook"
documentation = "http://steveklabnik.github.io/rustbook/rustbook/"
